<resources>
    <string name="app_name">ShopList</string>
    <string name="add">+</string>
    <string name="clear">Clear</string>
    <string name="name">Наименование</string>
    <string name="empty" />
    <string name="category">Категория</string>
    <string name="count">Кол-во</string>
    <string name="unit">Ед.изм.</string>
    <string name="bye">Bye</string>
    <string name="shop">Магазин</string>
    <string name="price">Цена</string>
    <string name="sum">Сумма</string>
    <string name="save">Save</string>
    <string name="rub">Российский рубль</string>
    <string name="code">Код</string>
    <string name="currency">Валюта</string>
    <string name="date">Дата</string>
</resources>
