<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ByeActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <TextView
            android:id="@+id/textSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop" />

    <AutoCompleteTextView
        android:id="@+id/editShop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="LabelFor"
        android:text="@string/empty" />

    <ListView
        android:id="@+id/listAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>